fixes icons on mobile

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -39,8 +39,8 @@
 .footer-wrapper {
 	width: 720px;
 	margin: 0 auto;
-
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: row;
 	justify-content: space-between;
 	text-align: justify;
@@ -175,6 +175,8 @@
 		display: flex;
 		flex-wrap: wrap;
 		padding: 10px;
+		order: 1;
+		justify-content: center;
 	}
 }
 
